--- a/i18n/ko_KR.yaml
+++ b/i18n/ko_KR.yaml
@@ -145,6 +145,8 @@ backend:
     common:
       invalid_url:
         other: 잘못된 URL 입니다.
+      status_invalid:
+        other: Invalid status.
     password:
       space_invalid:
         other: 암호에는 공백을 포함할 수 없습니다.
@@ -311,6 +313,9 @@ backend:
     site_info:
       config_not_found:
         other: 사이트 설정을 찾을 수 없습니다.
+    badge:
+      object_not_found:
+        other: Badge object not found
   reason:
     spam:
       name:
@@ -418,7 +423,7 @@ backend:
       other: Questions
   tag:
     tags_title:
-      other: Tags
+      other: 태그
     no_description:
       other: The tag has no description.
   notification:
@@ -459,6 +464,8 @@ backend:
         other: 댓글에 추천함
       invited_you_to_answer:
         other: 답변에 초대함
+      earned_badge:
+        other: You've earned the "{{.BadgeName}}" badge
   email_tpl:
     change_email:
       title:
@@ -525,6 +532,263 @@ backend:
   reaction:
     tooltip:
       other: "{{ .Names }} and {{ .Count }} more..."
+  badge:
+    default_badges:
+      autobiographer:
+        name:
+          other: Autobiographer
+        desc:
+          other: Filled out <a href="/users/settings/profile" target="_blank">profile</a> information.
+      certified:
+        name:
+          other: Certified
+        desc:
+          other: Completed our new user tutorial.
+      editor:
+        name:
+          other: Editor
+        desc:
+          other: First post edit.
+      first_flag:
+        name:
+          other: First Flag
+        desc:
+          other: First flagged a post.
+      first_upvote:
+        name:
+          other: First Upvote
+        desc:
+          other: First up voted a post.
+      first_link:
+        name:
+          other: First Link
+        desc:
+          other: First dirst added a link to another post.
+      first_reaction:
+        name:
+          other: First Reaction
+        desc:
+          other: First reacted to the post.
+      first_share:
+        name:
+          other: First Share
+        desc:
+          other: First shared a post.
+      scholar:
+        name:
+          other: Scholar
+        desc:
+          other: Asked a question and accepted an answer.
+      commentator:
+        name:
+          other: Commentator
+        desc:
+          other: Leave 5 comments.
+      new_user_of_the_month:
+        name:
+          other: New User of the Month
+        desc:
+          other: Outstanding contributions in their first month.
+      read_guidelines:
+        name:
+          other: Read Guidelines
+        desc:
+          other: Read the [community guidelines].
+      reader:
+        name:
+          other: Reader
+        desc:
+          other: Read every answers in a topic with more than 10 answers.
+      welcome:
+        name:
+          other: Welcome
+        desc:
+          other: Received a up vote.
+      nice_share:
+        name:
+          other: Nice Share
+        desc:
+          other: Shared a post with 25 unique visitors.
+      good_share:
+        name:
+          other: Good Share
+        desc:
+          other: Shared a post with 300 unique visitors.
+      great_share:
+        name:
+          other: Great Share
+        desc:
+          other: Shared a post with 1000 unique visitors.
+      out_of_love:
+        name:
+          other: Out of Love
+        desc:
+          other: Used 50 up votes in a day.
+      higher_love:
+        name:
+          other: Higher Love
+        desc:
+          other: Used 50 up votes in a day 5 times.
+      crazy_in_love:
+        name:
+          other: Crazy in Love
+        desc:
+          other: Used 50 up votes in a day 20 times.
+      promoter:
+        name:
+          other: Promoter
+        desc:
+          other: Invited a user.
+      campaigner:
+        name:
+          other: Campaigner
+        desc:
+          other: Invited 3 basic users.
+      champion:
+        name:
+          other: Champion
+        desc:
+          other: Invited 5 members.
+      thank_you:
+        name:
+          other: Thank You
+        desc:
+          other: Has 20 up voted posts and gave 10 up votes.
+      gives_back:
+        name:
+          other: Gives Back
+        desc:
+          other: Has 100 up voted posts and gave 100 up votes.
+      empathetic:
+        name:
+          other: Empathetic
+        desc:
+          other: Has 500 up voted posts and gave 1000 up votes.
+      enthusiast:
+        name:
+          other: Enthusiast
+        desc:
+          other: Visited 10 consecutive days.
+      aficionado:
+        name:
+          other: Aficionado
+        desc:
+          other: Visited 100 consecutive days.
+      devotee:
+        name:
+          other: Devotee
+        desc:
+          other: Visited 365 consecutive days.
+      anniversary:
+        name:
+          other: Anniversary
+        desc:
+          other: Active member for a year, posted at least once.
+      appreciated:
+        name:
+          other: Appreciated
+        desc:
+          other: Received 1 up vote on 20 posts.
+      respected:
+        name:
+          other: Respected
+        desc:
+          other: Received 2 up votes on 100 posts.
+      admired:
+        name:
+          other: Admired
+        desc:
+          other: Received 5 up votes on 300 posts.
+      solved:
+        name:
+          other: Solved
+        desc:
+          other: Have an answer be accepted.
+      guidance_counsellor:
+        name:
+          other: Guidance Counsellor
+        desc:
+          other: Have 10 answers be accepted.
+      know_it_all:
+        name:
+          other: Know-it-All
+        desc:
+          other: Have 50 answers be accepted.
+      solution_institution:
+        name:
+          other: Solution Institution
+        desc:
+          other: Have 150 answers be accepted.
+      nice_answer:
+        name:
+          other: Nice Answer
+        desc:
+          other: Answer score of 10 or more.
+      good_answer:
+        name:
+          other: Good Answer
+        desc:
+          other: Answer score of 25 or more.
+      great_answer:
+        name:
+          other: Great Answer
+        desc:
+          other: Answer score of 50 or more.
+      nice_question:
+        name:
+          other: Nice Question
+        desc:
+          other: Question score of 10 or more.
+      good_question:
+        name:
+          other: Good Question
+        desc:
+          other: Question score of 25 or more.
+      great_question:
+        name:
+          other: Great Question
+        desc:
+          other: Question score of 50 or more.
+      popular_question:
+        name:
+          other: Popular Question
+        desc:
+          other: Question with 500 views.
+      notable_question:
+        name:
+          other: Notable Question
+        desc:
+          other: Question with 1,000 views.
+      famous_question:
+        name:
+          other: Famous Question
+        desc:
+          other: Question with 5,000 views.
+      popular_link:
+        name:
+          other: Popular Link
+        desc:
+          other: Posted an external link with 50 clicks.
+      hot_link:
+        name:
+          other: Hot Link
+        desc:
+          other: Posted an external link with 300 clicks.
+      famous_link:
+        name:
+          other: Famous Link
+        desc:
+          other: Posted an external link with 100 clicks.
+    default_badge_groups:
+      getting_started:
+        name:
+          other: Getting Started
+      community:
+        name:
+          other: Community
+      posting:
+        name:
+          other: Posting
 # The following fields are used for interface presentation(Front-end)
 ui:
   how_to_format:
@@ -579,6 +843,9 @@ ui:
       posts: 게시물
       invites: 초대
       votes: 투표
+    answer: Answer
+    question: Question
+    badge_award: Badge
   suspended:
     title: 계정이 정지되었습니다
     until_time: "당신의 계정은 {{ time }}까지 정지되었습니다."
@@ -874,6 +1141,7 @@ ui:
       question: 질문
       tag: 태그
       user: 사용자
+      badges: Badges
       profile: 프로필
       setting: 설정
       logout: 로그아웃
@@ -1257,6 +1525,7 @@ ui:
     newest: 최신순
     active: 활성순
     hot: Hot
+    recommend: Recommend
     score: 평점순
     unanswered: 답변이 없는 질문
     modified: 수정됨
@@ -1275,12 +1544,14 @@ ui:
     reputation: 평판
     comments: 댓글
     votes: 투표
+    badges: Badges
     newest: 최신순
     score: 평점순
     edit_profile: 프로필 수정
     visited_x_days: "{{ count }} 일 방문함"
     viewed: 조회됨
     joined: 가입일
+    comma: ","
     last_login: 최근 접속
     about_me: 자기 소개
     about_me_empty: "// 안녕하세요, 세상아 !"
@@ -1298,6 +1569,7 @@ ui:
     x_votes: 받은 투표
     x_answers: 답변
     x_questions: 질문
+    recent_badges: Recent Badges
   install:
     title: 설치
     next: 다음
@@ -1407,6 +1679,7 @@ ui:
     questions: 질문
     answers: 답변
     users: 사용자
+    badges: Badges
     flags: 신고하기
     settings: 설정
     general: 일반
@@ -1430,6 +1703,18 @@ ui:
     login: 로그인
     qrcode_login_tip: '{{ agentName }}을(를) 사용하여 QR 코드를 스캔하고 로그인하세요.'
     login_failed_email_tip: 로그인 실패, 다시 시도하기 전에 이 앱이 이메일 정보에 접근할 수 있도록 허용하세요.
+  badges:
+    modal:
+      title: Congratulations
+      content: You've earned a new badge.
+      close: Close
+      confirm: View badges
+    title: Badges
+    awarded: Awarded
+    earned_×: Earned ×{{ number }}
+    ×_awarded: "{{ number }} awarded"
+    can_earn_multiple: You can earn this multiple times.
+    earned: Earned
   admin:
     admin_header:
       title: 관리자
@@ -1515,10 +1800,10 @@ ui:
             label: Username
             msg_range: Username up to 30 characters.
           email:
-            label: Email
+            label: 이메일
             msg_invalid: Invalid Email Address.
       edit_success: Edited successfully
-      btn_cancel: Cancel
+      btn_cancel: 취소
       btn_submit: Submit
     user_modal:
       title: 새 사용자 추가
@@ -1726,7 +2011,7 @@ ui:
         label: 예약된 태그
         text: "Reserved tags can only be used by moderator."
     seo:
-      page_title: SEO
+      page_title: 검색 엔진 최적화
       permalink:
         label: 영구 링크
         text: 사용자 정의 URL 구조는 링크의 사용성과 미래 호환성을 향상시킬 수 있습니다.
@@ -1834,6 +2119,20 @@ ui:
       msg:
         should_be_number: 입력값은 숫자여야 합니다.
         number_larger_1: 숫자는 1 이상이어야 합니다.
+    badges:
+      action: Action
+      active: Active
+      all: All
+      awards: Awards
+      deactivate: Deactivate
+      filter:
+        placeholder: Filter by name, badge:id
+      group: Group
+      inactive: Inactive
+      name: Name
+      show_logs: Show logs
+      status: Status
+      title: Badges
   form:
     optional: (선택 사항)
     empty: 비어 있을 수 없습니다
