--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -2158,6 +2158,7 @@ ui:
     badges:
       action: Action
       active: Active
+      activate: Activate
       all: All
       awards: Awards
       deactivate: Deactivate
